# synth

./: LICENSE  README.md  build.py  pyproject.toml
src/: main.py  main_rc.py  main_window.py  theme.py
src/core/: __init__.py  las_loader.py  seismic.py  wavelet.py
src/gui/qt/: SynthMainWindow.ui  ui_SynthMainWindow.py
src/gui/resources/: main_rc.py
src/tests/: conftest.py
